# Tasks

./: .env.example  .gitignore  AI_Fluency_Plan.md  README.md  adventure_graph.py  adventure_main.py  agent.py  agent_script.py  agent_stream.py  app.py  assignment_parser.py  brief_agent.py  chunker.py  cli.py  compare_state.py  config.py  config.yaml  event_cli.py  event_models.py  event_parser.py  graph.py  hitl_chat.py  hitl_custom_demo.py  hitl_demo.py  hitl_graph.py  init_client.py  init_documents.py  langgraph.json  llm_utils.py  load_documents_cli.py  load_faq_to_chroma.py  main.py  memory_client.py  memory_server.py  mock_meta.json  models.py  nodes.py  parse_assignment.py  parser.py  planning_agent.py  (+25 more)
agent/: __init__.py  config.py  deep_ui.py  deepagents_app.py  graph.py  llm.py  main.py  state.py  ui.py
agent/api/: __init__.py  journal.py  openapi_loader.py
agent/nodes/: analyze.py  (+6 more)
brief/: graph.py  nodes.py  state.py
data/: faq1.md  faq2.md  faq3.md
documents/: README.md  sample.txt
mock_data/: meta.json
mock_server/: metadata.json
nodes/: draft_review.py  reflect.py  rewrite.py
prompts/: analyze_assignment.md  edit_repository.md  plan_changes.md  repair_repository.md  review_diff.md
scripts/: load_documents.py
src/: __init__.py  agent.py  agent_state.py  cli.py  graph.py  main.py  nodes.py  state.py  tools.py  utils.py
structured_output/: extractor.py  models.py  prompts.py  router.py
tests/: test_agent.py  test_models.py  test_parser.py  test_search_tool.py  test_virtual_file_system.py
ui/: pnpm-lock.yaml  pnpm-workspace.yaml
(+15 files in other folders)
