[project]
name = "journal-assignment-agent"
version = "0.1.0"
description = "Autonomous assignment-solving CLI agent for Journal.bh"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langgraph>=0.1.0",
  "langgraph-cli[inmem]>=0.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
journal-agent = "agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
